# AnimeOrganiser

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Anime Organiser HQ/: Anime Organiser.sln  Anime Organiser.vcxproj
Anime Organiser HQ/src/: main.cpp
Anime Organiser LQ/: Anime Organiser.sln  Anime Organiser.vcxproj
Anime Organiser LQ/src/: main.cpp
Entertainment/: Entertainment.vcxproj  Entertainment.vcxproj.filters
Entertainment/inc/: Entertainment.hpp
Entertainment/src/: Entertainment.cpp  Entertainment.h
EpSubManagment/: CMakeLists.txt
EpSubManagment/inc/: Episode.hpp  File.hpp  Subtitle.hpp
EpSubManagment/src/: Episode.cpp  File.cpp  Subtitle.cpp
EpisodeSubtitleManagment/: CMakeLists.txt  EpisodeSubtitleManagment.vcxproj  EpisodeSubtitleManagment.vcxproj.filters
EpisodeSubtitleManagment/Episode/: Episode.cpp  Episode.h
EpisodeSubtitleManagment/File/: File.cpp  File.h
EpisodeSubtitleManagment/Subtitle/: Subtitle.cpp  Subtitle.h
EpisodeSubtitleManagment/inc/: Episode.hpp  File.hpp  Subtitle.hpp
EpisodeSubtitleManagment/src/: File.cpp  Subtitle.cpp
Execute Files/: AnimeOrganiserHQ v.3  AnimeOrganiserLQ v.3
FilesManagment/: FilesManagment.vcxproj  FilesManagment.vcxproj.filters
FilesManagment/fml/: FilesManagment.tpp
FilesManagment/inc/: FilesManagment.hpp
FilesManagment/src/: FMtemplates.h  FilesManagment.cpp  FilesManagment.h
Menu/: CMakeLists.txt  Menu.vcxproj  Menu.vcxproj.filters
Menu/inc/: Menu.hpp
Menu/src/: Menu.cpp  Menu.h
StringManagment/: StringManagment.vcxproj  StringManagment.vcxproj.filters
StringManagment/inc/: StringManagment.hpp
StringManagment/src/: StringManagment.cpp  StringManagment.h
Testy/: CMakeLists.txt  main.cpp
firmware/: AnimeOrganiser.py  AnimeOrganiserHQ.cpp  AnimeOrganiserHQ.sh  AnimeOrganiserLQ.cpp  AnimeOrganiserLQ.sh  CMakeLists.txt
requirements/: apt.txt
